force-app/main/default/objects/ARTL_Bulk_Iteration_Log__c/ARTL_Bulk_Iteration_Log__c.object-meta.xml
<CustomObject>
    <label>ARTL_Bulk_Iteration_Log</label>
    <nameField>
        <displayFormat>BIL-{0000}</displayFormat>
        <label>ARTL_Bulk_Iteration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ARTL_Bulk_Iteration_Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>