force-app/main/default/objects/ARTL_Bulk_Iteration_Log__c/fields/ARTL_Bulk_Iteration__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Bulk_Iteration__c</fullName>
    <label>ARTL_Bulk_Iteration</label>
    <referenceTo>ARTL_Bulk_Iteration__c</referenceTo>
    <relationshipLabel>ARTL_Bulk_Iteration_Logs</relationshipLabel>
    <relationshipName>ARTL_Bulk_Iteration_Logs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>