force-app/main/default/objects/ARTL_Bulk_Iteration_Log__c/fields/Asset_Reference_Id__c.field-meta.xml
<CustomField>
    <fullName>Asset_Reference_Id__c</fullName>
    <label>Asset Reference Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>