force-app/main/default/objects/ARTL_Bulk_Iteration_Log__c/fields/ErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>ErrorMessage__c</fullName>
    <label>ErrorMessage</label>
    <length>30</length>
    <type>Text</type>
</CustomField>