force-app/main/default/objects/ARTL_Bulk_Iteration_Log__c/fields/LSI__c.field-meta.xml
<CustomField>
    <fullName>LSI__c</fullName>
    <label>LSI</label>
    <length>30</length>
    <type>Text</type>
</CustomField>