force-app/main/default/objects/ARTL_Bulk_Iteration_Log__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <length>30</length>
    <type>Text</type>
</CustomField>