force-app/main/default/objects/ARTL_Bulk_Iteration_Log__c/fields/Quote_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Quote_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote Line Item</label>
    <referenceTo>QuoteLineItem</referenceTo>
    <relationshipLabel>ARTL_Bulk_Iteration_Logs</relationshipLabel>
    <relationshipName>ARTL_Bulk_Iteration_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>